Fix table height so order buttons are visible

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -80,6 +80,7 @@
     padding: 8px;
     margin-top: 12px;
     color: black;
+    text-align: center;
   }
 
   h3 {
@@ -311,7 +312,7 @@
   }
 
   #granule-list-container {
-    height: calc(var(--columnHeight) - 50px);
+    height: calc(var(--columnHeight) - 150px);
     overflow-x: auto;
     overflow-y: scroll;
     width: 100%;
